crates/red_knot_project/src/project/snapshots/red_knot_project__project__metadata__tests__nested_projects_in_root_project.snap
---
source: crates/red_knot_workspace/src/project/metadata.rs
expression: root
---
ProjectMetadata(
  name: Name("project-root"),
  root: "/app",
  options: Options(
    environment: None,
    src: Some(SrcOptions(
      root: Some("src"),
    )),
  ),
)
