crates/red_knot_project/src/project/snapshots/red_knot_project__project__metadata__tests__nested_projects_with_outer_knot_section.snap
---
source: crates/red_knot_workspace/src/project/metadata.rs
expression: root
---
ProjectMetadata(
  name: Name("project-root"),
  root: "/app",
  options: Options(
    environment: Some(EnvironmentOptions(
      r#python-version: Some("3.10"),
      r#python-platform: None,
      r#extra-paths: None,
      typeshed: None,
      r#venv-path: None,
    )),
    src: None,
  ),
)
