crates/red_knot_project/src/project/snapshots/red_knot_project__project__metadata__tests__nested_projects_without_knot_sections.snap
---
source: crates/red_knot_workspace/src/project/metadata.rs
expression: sub_project
---
ProjectMetadata(
  name: Name("nested-project"),
  root: "/app/packages/a",
  options: Options(
    environment: None,
    src: None,
  ),
)
